use dotenv to load infura id

--- a/comp_farmed.ipynb
+++ b/comp_farmed.ipynb
@@ -7,7 +7,10 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "from web3 import Web3, HTTPProvider"
+    "from web3 import Web3, HTTPProvider\n",
+    "\n",
+    "import os\n",
+    "from dotenv import load_dotenv"
    ]
   },
   {
@@ -24,8 +27,12 @@
     "comptroller = Web3.toChecksumAddress('0x3d9819210a31b4961b30ef54be2aed79b9c9cd3b')\n",
     "lens = Web3.toChecksumAddress('0xd513d22422a3062Bd342Ae374b4b9c20E0a9a074')\n",
     "\n",
-    "# set up connection to infura\n",
-    "infura_project_id = 'your_infura_id'\n",
+    "\n",
+    "\n",
+    "# set up connection to infura\\\n",
+    "load_dotenv()\n",
+    "infura_project_id = os.getenv(\"INFURA_PROJECT_ID\")\n",
+    "\n",
     "infura_url = 'https://mainnet.infura.io/v3/' + infura_project_id\n",
     "w3 = Web3(Web3.HTTPProvider(infura_url))\n",
     "\n",
