refactor to split out main functions as py script

--- a/comp_farmed.ipynb
+++ b/comp_farmed.ipynb
@@ -1,74 +1,40 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import json\n",
-    "from web3 import Web3, HTTPProvider\n",
-    "\n",
-    "import os\n",
-    "from dotenv import load_dotenv"
+    "Replace `my_address` with your Ethereum address and then run the next two cells"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your wallet address\n",
-    "my_wallet = Web3.toChecksumAddress('my_address')\n",
-    "\n",
-    "# compound contracts\n",
-    "comp = Web3.toChecksumAddress('0xc00e94cb662c3520282e6f5717214004a7f26888')\n",
-    "comptroller = Web3.toChecksumAddress('0x3d9819210a31b4961b30ef54be2aed79b9c9cd3b')\n",
-    "lens = Web3.toChecksumAddress('0xd513d22422a3062Bd342Ae374b4b9c20E0a9a074')\n",
-    "\n",
-    "\n",
-    "\n",
-    "# set up connection to infura\\\n",
-    "load_dotenv()\n",
-    "infura_project_id = os.getenv(\"INFURA_PROJECT_ID\")\n",
-    "\n",
-    "infura_url = 'https://mainnet.infura.io/v3/' + infura_project_id\n",
-    "w3 = Web3(Web3.HTTPProvider(infura_url))\n",
-    "\n",
-    "# load the lens contract ABI\n",
-    "with open('lens.json') as file:\n",
-    "    abi_json = json.load(file)\n",
-    "lens_abi = abi_json\n",
-    "\n",
-    "# create the lens contract object\n",
-    "lens_contract = w3.eth.contract(address = lens, \n",
-    "                                          abi = lens_abi)"
+    "my_address = 'my_address' ## input your address here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# gets total COMP earned by an address: the sum of current balance and current accrued\n",
-    "\n",
-    "def get_comp(address):\n",
-    "    metadata = lens_contract.functions.getCompBalanceMetadataExt(comp, comptroller, address).call()\n",
-    "    held = metadata[0]\n",
-    "    accrued = metadata[3]\n",
-    "    return (held + accrued) / 10**18"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "My COMP:  0.7781\n"
+    }
+   ],
    "source": [
+    "from comp_farmed import *\n",
+    "\n",
+    "my_wallet = Web3.toChecksumAddress(my_address)\n",
+    "\n",
+    "\n",
     "my_comp = get_comp(my_wallet)\n",
     "\n",
     "print('My COMP: ', round(my_comp,4))"
