get COMP price from coingecko

--- a/comp_farmed.ipynb
+++ b/comp_farmed.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,26 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "My COMP:  0.7781\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from comp_farmed import *\n",
     "\n",
     "my_wallet = Web3.toChecksumAddress(my_address)\n",
     "\n",
-    "\n",
     "my_comp = get_comp(my_wallet)\n",
+    "my_comp_value = my_comp * comp_usd_price()\n",
     "\n",
-    "print('My COMP: ', round(my_comp,4))"
+    "print('My COMP: ', round(my_comp,4))\n",
+    "print('My COMP value: ', '$' + str(round(my_comp_value, 2)))"
    ]
   },
   {
